hphp/hack/test/typecheck/array/disallow_darray_where_vector_like_array_is_required.php.exp
File "disallow_darray_where_vector_like_array_is_required.php", line 4, characters 10-31:
Invalid return type (Typing[4110])
File "disallow_darray_where_vector_like_array_is_required.php", line 3, characters 18-30:
This is an array (used like a vector)
File "disallow_darray_where_vector_like_array_is_required.php", line 4, characters 10-31:
It is incompatible with a darray
